--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -18,7 +18,8 @@ p{
   clear: right;
 }
 .sb{
-  border: 1px solid black;
+  border-bottom: 1px solid black;	
+  border-left: 1px solid black;
   width: 100px;
   float: right;
   text-align: center;
